tests, README and workflow

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,6 +25,10 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/StatisMike/shiny.reglog/workflows/R-CMD-check/badge.svg)](https://github.com/StatisMike/shiny.reglog/actions)
 <!-- badges: end -->
 
+>These informations are relevant to the current release, which comes with some
+changes to underlying logic. It isn't currently submitted to CRAN. If you are
+looking for information about version present at CRAN, check its [mirror](https://github.com/cran/shiny.reglog){target="_blank"}
+
 ## 1. Introduction
 
 The user authentication in Shiny applications can be very useful. Mainly, user can 
@@ -60,12 +64,24 @@ The `emayili` is recommended for most applications. `gmailr` can be useful
 if you already have application registered and authorized with mail sending
 scope.
 
-Currently the package is after major change in its code - basically full rewrite
+>Currently the package is after major change in its code - basically full rewrite
 to allow more security, usage of more databases and more customization. Past 
 functions are still available in current version, but will 
 generate deprecation warnings. 
 
-## 2. Basic structure 
+## 2. Additional information
+
+Basic information about *shiny.reglog* is contained within this document. There
+are some more resources to learn about its usage:
+
+- You can access demonstration shinyApp with showcase mode on 
+[shinyapps.io](https://statismik.shinyapps.io/shinyreglog_demo/){target="_blank"}
+- You can run interactive demo in your own RStudio by using `RegLogDemo()` 
+function. It will use mocked *mailConnector* by default or *RegLogEmayiliConnector* 
+if you provide it arguments required by `emayili` backend.
+- For more information read vignettes.
+
+## 3. Basic structure 
 
 There are three main objects that are to be used when implementing *RegLog* system
 for login and registration in your ShinyApp. All of them need to be defined
@@ -79,7 +95,7 @@ will handle all automatical emailing to the user emails.
 reactivity of the login and registration system. It uses *dbConnector* and
 *mailConnector* for actions external of R.
 
-## 3. Installation
+## 4. Installation
 
 You can install this version of shiny.reglog from GitHub with:
 
@@ -92,7 +108,7 @@ devtools::install_github("StatisMike/shiny.reglog")
 # install.packages("shiny.reglog")
 ```
 
-## 4. Setting up *dbConnector*
+## 5. Setting up *dbConnector*
 
 You need to create *dbConnector* object to be used by the *RegLogServer* to 
 write and read user data from the database.
@@ -101,7 +117,7 @@ To set-up the database for *RegLog* system, you can use helper functions
 included in this package. They are tested and guarantee compatible structure
 of the data.
 
-### 4.1 Googlesheet database method (*RegLogGsheetConnector*)
+### 5.1 Googlesheet database method (*RegLogGsheetConnector*)
 
 1. Create googlesheet file on your googledrive to support database. You can use
 `gsheet_tables_create()` function, which by default creates empty spreadsheets
@@ -150,7 +166,7 @@ server <- function(input, output, session) {
 }
 ```
 
-### 4.2 `DBI` compatible SQL database (*RegLogDBIConnector*)
+### 5.2 `DBI` compatible SQL database (*RegLogDBIConnector*)
 
 *RegLog system* out of the box supports *SQLite*, *MySQL*, *MariaDB* and *PostgreSQL*
 databases. You can use `DBI_tables_create` function, which by default creates empty 
@@ -207,13 +223,13 @@ server <- function(input, output, session) {
 }
 ```
 
-## 5. Setting up mail connectors
+## 6. Setting up mail connectors
 
 You need to create *mailConnector* object to be used by the *RegLogServer* to 
 write and read user data from the database. There are two classes defined to use
 `emayili` or `gmailr` packages as backend.
 
-### 5.1. Using `emayili` (*RegLogEmayiliConnector*)
+### 6.1. Using `emayili` (*RegLogEmayiliConnector*)
 
 This backend is recommended to use. It supports many SMTP servers, mostly
 with username and password based identification.
@@ -230,7 +246,7 @@ server <- function(input, output, session) {
 }
 ```
 
-### 5.2. Using `gmailr` (*RegLogGmailrConnector*)
+### 6.2. Using `gmailr` (*RegLogGmailrConnector*)
 
 This backend is only viable if you have an app registered in Google Cloud Console.
 It authorizes and sends email via gmail REST API, needing Oauth authorization
@@ -246,7 +262,7 @@ server <- function(input, output, session) {
 }
 ```
 
-## 6. Setup *RegLogServer*
+## 7. Setup *RegLogServer*
 
 All of **RegLog system** is generated and maintained by the object of class 
 `RegLogSystem` in unison with *dbConnector* and *mailConnector* of your
@@ -288,7 +304,7 @@ are listed there alongside conditions of their appearance.
 - `module_id`: character string with ID of the module. Recommended to leave
 as default - unless if that name is taken by another module.
 
-### 6.1. Retrieve information from **RegLogServer**
+### 7.1. Retrieve information from **RegLogServer**
 
 After setting up and assigning the object your application logic can observe
 status of user in current session by public fields containing *reactiveVal*
@@ -316,12 +332,12 @@ RegLog$account_id()
 read **RegLogServer object fields and methods**. Above information is enough
 for basic setup.
 
-## 7. Insert UI elements
+## 8. Insert UI elements
 
 Every part of the UI is generated by *RegLogServer*, and could be accessed by
 provided functions containing `tagList`.
 
-### 7.1. Login UI
+### 8.1. Login UI
 
 Providing GUI to allow logging in if user is already registered to your 
 application.
@@ -332,7 +348,7 @@ application.
 RegLog_login_UI()
 ```
 
-### 7.2. Register UI
+### 8.2. Register UI
 
 Providing GUI for registering new account.
 
@@ -354,7 +370,7 @@ After account registration, user will receive confirmation email on their passwo
 RegLog_register_UI()
 ```
 
-### 7.3. Credentials edit UI
+### 8.3. Credentials edit UI
 
 Providing GUI for changing credentials.
 
@@ -372,7 +388,7 @@ Providing GUI for changing credentials.
 RegLog_credsEdit_UI()
 ```
 
-### 7.4. Reset password UI
+### 8.4. Reset password UI
 
 Providing GUI for password reset.
 
@@ -387,13 +403,4 @@ their user ID
 ```{r, eval = F}
 RegLog_resetPass_UI()
 ```
-
-## 8. Additional information
-
-- You can access demonstration shinyApp with showcase mode on 
-[shinyapps.io](https://statismik.shinyapps.io/shinyreglog_demo/){target="_blank"}
-- You can run interactive demo in your own RStudio by using `RegLogDemo()` 
-function. It will use mocked *mailConnector* by default or *RegLogEmayiliConnector* 
-if you provide it arguments required by `emayili` backend.
-- For more information read vignettes.
 
